fixed layout bug

--- a/Project/ReviewProj/ReviewProj.WebUI/Content/custom.css
+++ b/Project/ReviewProj/ReviewProj.WebUI/Content/custom.css
@@ -26,18 +26,17 @@ p {
 }
 
 header {
-	position: relative;
-	width: 100%;
-	height: 10px;
-	/*min-height: auto;*/
-	text-align: center;
-	/*color: #fff;*/
-	background-image: url('AppResources/AdobeStock_76218229_LVIV.jpeg');
-	background-position: center;
-	background-size:cover;
-	/*-webkit-background-size: cover;
+    width: 100%;
+    height: 20px;
+    /*min-height: auto;*/
+    text-align: center;
+    /*color: #fff;*/
+    background-image: url('AppResources/AdobeStock_76218229_LVIV.jpeg');
+    background-position: center;
+    background-size: cover;
+    /*-webkit-background-size: cover;
 	-moz-background-size: cover;*/
-	/*-o-background-size: cover;*/
+    /*-o-background-size: cover;*/
 }
 
 	header .header-content {
@@ -48,13 +47,6 @@ header {
 		
 	}
 
-header .header-content .header-content-inner h1 {
-		margin-top: 55%;
-		margin-bottom: 54%;
-		font-size: 70px;
-		font-weight:100;
-		color:forestgreen;
-	}
 
 
 @media(min-width:768px) {
